View Issue Details

IDProjectCategoryView StatusLast Update
0022968CommunityOCCT:Modeling Algorithmspublic2012-03-29 17:26
ReporterRoberto Ciarloni Assigned Tobugmaster  
PriorityurgentSeverityintegration request 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2010 
Product Version6.5.1 
Target Version6.5.3Fixed in Version6.5.3 
Summary0022968: RebuildShape exchanges 2d-curves
DescriptionIn case of a seam of REVERSED oriented TopoDS_Face, RebuildShape in ShapeUpgrade_RemoveLocations.cxx exchange the position of 2d-curves in the BRep_TEdge
Steps To ReproduceBRepBuilderAPI_Transform builderTransform(Trsf);
builderTransform.Perform (sol, true);
ShapeUpgrade_RemoveLocations sh_rem;
Standard_Boolean ret = sh_rem.Remove (builderTransform.Shape());
TopoDS_Solid sol = TopoDS::Solid(sh_rem.GetResult ())

where TopoDS_Solid sol is a cylinder
Additional information
and documentation updates
Fix in attachment
old code:
if(theNewFace.Orientation() == TopAbs_REVERSED)
  OrEdge = ( OrEdge == TopAbs_FORWARD ? TopAbs_REVERSED : TopAbs_FORWARD);
new code:
if(theFace.Orientation() == TopAbs_REVERSED)
  OrEdge = ( OrEdge == TopAbs_FORWARD ? TopAbs_REVERSED : TopAbs_FORWARD);
TagsNo tags attached.
Test case numberchl 934 S1

Attached Files

  • ShapeUpgrade_RemoveLocations.cxx (9,666 bytes)
  • To_OCC-1_Contribution.docx (24,795 bytes)
  • cylface.brep (1,238 bytes)
  • testremoveloc.tcl (71 bytes)
  • S1 (863 bytes)

Activities

Roberto Ciarloni

2012-02-01 20:25

reporter  

ShapeUpgrade_RemoveLocations.cxx (9,666 bytes)

szy

2012-02-02 11:27

manager  

To_OCC-1_Contribution.docx (24,795 bytes)

szy

2012-02-02 11:28

manager   ~0019343

Added additional file with description - To_OCC-1_Contribution.docx.

gka

2012-02-09 17:01

developer  

cylface.brep (1,238 bytes)

gka

2012-02-09 17:02

developer  

testremoveloc.tcl (71 bytes)

gka

2012-02-09 17:04

developer   ~0019491

Added shape on which bug is reproduced and script to test

gka

2012-02-09 17:12

developer   ~0019492

The fix is committed to http://svn/svn/occt/branches/OCC22968

mkv

2012-02-10 20:04

tester   ~0019522

Dear BugMaster,
Workbench KAS:dev:mkv-22968-occt was created from SVN branch http://svn/svn/occt/branches/OCC22968
(and mkv-22968-products from trunk) and compiled on Linux platform.

There is compilation error in mkv-22968-occt:

Info : -------> SWDRAW_ShapeUpgrade.cxx
Error : Errors occured in Shell
/dn47/KAS/dev/mkv-22968-occt/src/SWDRAW/SWDRAW_ShapeUpgrade.cxx: In function 'Standard_Integer DT_SplitAngle(Draw_Interpretor&, Standard_Integer, const char**)':

/dn47/KAS/dev/mkv-22968-occt/src/SWDRAW/SWDRAW_ShapeUpgrade.cxx:453: error: 'PI' was not declared in this scope

Error : Failed : SWDRAW_ShapeUpgrade.cxx
Info : ----------------------- Compilation Report -----------------------
Info : Failed : :KAS:dev:mkv-22968-occt:SWDRAW:source:SWDRAW_ShapeUpgrade.cxx
Info : -----------------------------------------------------------------

gka

2012-02-13 11:49

developer   ~0019525

Minor correction PI on M_PI

apn

2012-02-14 18:12

administrator  

S1 (863 bytes)

apn

2012-02-14 18:16

administrator   ~0019560

Dear BugMaster,
 Workbench KAS:dev:mkv-22968-occt was updated from SVN branch http://svn/svn/occt/branches/OCC22968
 (and mkv-22968-products from trunk) and compiled on Linux and Windows platforms.
 
 There are not regressions in mkv-22968-products regarding to KAS:dev:products-20120203-opt
 
Test case for this fix is chl 934 S1. It's OK.

 See results in /QADisk/occttests/results/KAS/dev/mkv-22968-products_13022012/lin
 See reference results in /QADisk/occttests/results/KAS/dev/products-20120203-opt_03022012/lin
 See test cases in /QADisk/occttests/tests/ED

bugmaster

2012-02-17 15:30

administrator   ~0019628

Integrated into trunk of occt repository

Date: 2012-02-17 15:25:29 +0400 (Fri, 17 Feb 2012)
New Revision: 10505

Modified:
   trunk/src/SWDRAW/SWDRAW_ShapeUpgrade.cxx
   trunk/src/ShapeUpgrade/ShapeUpgrade_RemoveLocations.cxx

Related Changesets

occt: master 982a90fc

2012-02-17 11:25:29

gka


Committer: bugmaster Details Diff
0022968: RebuildShape exchanges 2d-curves Affected Issues
0022968
mod - src/ShapeUpgrade/ShapeUpgrade_RemoveLocations.cxx Diff File
mod - src/SWDRAW/SWDRAW_ShapeUpgrade.cxx Diff File

Issue History

Date Modified Username Field Change
2012-02-01 20:25 Roberto Ciarloni New Issue
2012-02-01 20:25 Roberto Ciarloni Assigned To => jgv
2012-02-01 20:25 Roberto Ciarloni File Added: ShapeUpgrade_RemoveLocations.cxx
2012-02-02 07:34 abv Assigned To jgv => gka
2012-02-02 07:34 abv Status new => assigned
2012-02-02 10:37 bugmaster Project Open CASCADE => Community
2012-02-02 11:27 szy File Added: To_OCC-1_Contribution.docx
2012-02-02 11:28 szy Note Added: 0019343
2012-02-09 17:01 gka File Added: cylface.brep
2012-02-09 17:02 gka File Added: testremoveloc.tcl
2012-02-09 17:02 gka Status assigned => resolved
2012-02-09 17:03 gka Status resolved => reviewed
2012-02-09 17:04 gka Note Added: 0019491
2012-02-09 17:12 gka Note Added: 0019492
2012-02-10 20:04 mkv Note Added: 0019522
2012-02-10 20:05 mkv Status reviewed => assigned
2012-02-13 11:48 gka Status assigned => resolved
2012-02-13 11:49 gka Note Added: 0019525
2012-02-13 11:49 gka Status resolved => reviewed
2012-02-14 13:23 mkv Assigned To gka => apn
2012-02-14 15:01 apn Test case number => chl 934 S1
2012-02-14 18:12 apn File Added: S1
2012-02-14 18:16 apn Note Added: 0019560
2012-02-14 18:16 apn Status reviewed => tested
2012-02-17 15:30 bugmaster Assigned To apn => Roberto Ciarloni
2012-02-17 15:30 bugmaster Target Version => 6.5.3
2012-02-17 15:30 bugmaster Note Added: 0019628
2012-02-17 15:30 bugmaster Status tested => verified
2012-02-17 15:30 bugmaster Resolution open => fixed
2012-03-29 17:26 bugmaster Changeset attached => occt master 982a90fc