0022968: RebuildShape exchanges 2d-curves